[package]
name = "example-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
bincode = "1.0"
juniper = "0.14.2"
failure = "0.1.2"
cubeos-error = { git = "ssh://git@github.com/Cube-OS/cubeos-error.git"}